src/objects/DRDW_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Display__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tab_Name__c</fullName>
        <label>Tab Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab_Sequence__c</fullName>
        <label>Tab Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>DRDW Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DRDP Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DRDW Configurations</pluralLabel>
    <recordTypes>
        <fullName>Home_Config</fullName>
        <active>true</active>
        <label>Home Config</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tabs</fullName>
        <active>true</active>
        <label>Tabs</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>